# TVD_Condat2013

./: .gitattributes  .gitignore  DEBUG  LICENSE  README.md  RELEASE.md  Test_Run.ipynb  pyproject.toml  setup.py
cmake/: FindNumPy.cmake
docs/: Makefile  TVD_Condat2013.rst  api.rst  conf.py  index.rst
examples/: Thumbs.db  example_DTVDR.py  example_readme.py
src/: main.cpp  main.hpp
tests/: conftest.py  test_extension.py  test_import.py  test_wheelhouse_tools.py
wheelhouse/: .gitignore  debug_wheel.py  repair_wheel.py  tvdcondat2013-0.0.1-cp310-cp310-macosx_10_9_x86_64.whl  tvdcondat2013-0.0.1-cp310-cp310-macosx_11_0_arm64.whl  tvdcondat2013-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tvdcondat2013-0.0.1-cp310-cp310-musllinux_1_1_x86_64.whl  tvdcondat2013-0.0.1-cp310-cp310-win32.whl  tvdcondat2013-0.0.1-cp310-cp310-win_amd64.whl  tvdcondat2013-0.0.1-cp311-cp311-macosx_10_9_x86_64.whl  tvdcondat2013-0.0.1-cp311-cp311-macosx_11_0_arm64.whl  tvdcondat2013-0.0.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tvdcondat2013-0.0.1-cp311-cp311-musllinux_1_1_x86_64.whl  tvdcondat2013-0.0.1-cp311-cp311-win32.whl  tvdcondat2013-0.0.1-cp311-cp311-win_amd64.whl  tvdcondat2013-0.0.1-cp312-cp312-macosx_10_9_x86_64.whl  tvdcondat2013-0.0.1-cp312-cp312-macosx_11_0_arm64.whl  tvdcondat2013-0.0.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tvdcondat2013-0.0.1-cp312-cp312-musllinux_1_1_x86_64.whl  tvdcondat2013-0.0.1-cp312-cp312-win32.whl  tvdcondat2013-0.0.1-cp312-cp312-win_amd64.whl  tvdcondat2013-0.0.1-cp38-cp38-win32.whl  (+11 more)
(+2 files in other folders)
